examples/test/testpolicy19201.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19201
  namespace: namespace483
spec:
  podSelector:
    matchLabels:
      key44: value44
      key27: value7
      key2: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value42
          key6: value20
      podSelector:
        matchLabels:
          key2: value47
          key32: value43
          key17: value39
